# echocheck

./: .gitignore  README.md  evaluation_results.json  main.py  pyproject.toml
scripts/: check_gpu.py  convert_to_jsonl.py  create_sample_data.py  evaluate.py  explore_data.py  inference.py  preprocess.py  test_dataloaders.py  test_dataset_minimal.py  test_model.py  train.py  upload_to_hub.py
src/: __init__.py  main.py
src/data/: __init__.py  create_dataloaders.py  dataset.py
src/models/: model.py
