[project]
name = "echocheck"
version = "0.1.0"
description = "Political Ideology and Stance Classification using Advanced NLP techniques"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "datasets>=4.5.0",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "scikit-learn>=1.8.0",
    "tensorboard>=2.20.0",
    "torch>=2.10.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.6",
]

[dependency-groups]
dev = [
    "ruff>=0.14.14",
]
